* enumerator.c (inspect_enumerator): suppress uninitialized   instance variable warnings.  [ruby-dev:45449][Bug #6214]   patched by no6v (Nobuhiro IMAI).

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35218 b2dd03c8-39d4-4d8f-98ff-823fe69b080e